--- a/Dineoutzw/index.html
+++ b/Dineoutzw/index.html
@@ -23,7 +23,7 @@
 		  <div class="prime-content">
 		  	<h2>About this site</h2>
 		  	<p>A highlight of the best and the not so fine dining experiences in Zimbabwe.</p>
-		  	<a href="#about">Find Out more</a>
+		  	<a href="#about">Find out more</a>
 		  </div>
 
 		  	<section class="minor-content">
